syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/traceableai/goagent/instrumentation/google.golang.org/grpc/internal";

package helloworld;

service PersonRegistry {
  rpc Register(RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
  string firstname = 1;
  string lastname = 2;
  google.protobuf.Timestamp birthdate = 3;
  bool confirmed = 4;
}

message RegisterReply { int64 id = 1; }